# Pytest_result_sender

./: HelpFromJoe.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: run-when-push.yaml
src/pytest_result_sender/: plugin.py
tests/: test_api.py
